# matrix-authentication-service

./: .dockerignore  .editorconfig  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  book.toml  clippy.toml  config.yaml  deny.toml  docker-bake.hcl  localazy.json
crates/axum-utils/: Cargo.toml
crates/axum-utils/src/: client_authorization.rs  cookies.rs  csrf.rs  error_wrapper.rs  fancy_error.rs  http_client_factory.rs  jwt.rs  language_detection.rs  lib.rs  sentry.rs  session.rs  url_builder.rs  user_authorization.rs
crates/cli/: Cargo.toml
crates/cli/src/: app_state.rs  config.rs  database.rs  main.rs  manage.rs  server.rs  sync.rs  telemetry.rs  templates.rs  util.rs
crates/config/: Cargo.toml
crates/config/src/: cookies.rs  csrf.rs  database.rs  email.rs  http.rs  lib.rs  oauth2.rs  schema.rs  telemetry.rs  templates.rs  util.rs
crates/core/: Cargo.toml  build.rs  sqlx-data.json
crates/core/src/: errors.rs  lib.rs  templates.rs  tokens.rs
crates/data-model/: Cargo.toml
crates/data-model/examples/: ua-parser.rs
crates/data-model/src/: compat.rs  errors.rs  lib.rs  site_config.rs  tokens.rs  traits.rs  user_agent.rs  users.rs
crates/email/: Cargo.toml
crates/email/src/: lib.rs  mailer.rs  transport.rs
crates/graphql/: Cargo.toml  schema.graphql
crates/graphql/src/: lib.rs  model.rs  mutations.rs  query.rs  state.rs
crates/handlers/: Cargo.toml
crates/handlers/src/: app_state.rs  captcha.rs  graphql.rs  health.rs  lib.rs  passwords.rs  preferred_language.rs  rate_limit.rs  site_config.rs  test_utils.rs
crates/http/: Cargo.toml
crates/http/src/: client.rs  ext.rs  future_service.rs  lib.rs  service.rs
crates/http/tests/: client_layers.rs
crates/i18n/: Cargo.toml
crates/i18n-scan/: Cargo.toml
crates/i18n-scan/src/: key.rs  main.rs  minijinja.rs  tera.rs
crates/i18n/src/: lib.rs  translations.rs  translator.rs
crates/i18n/test_data/: en-US.json  en.json  fr.json
crates/iana/: Cargo.toml
crates/iana-codegen/: Cargo.toml
crates/iana-codegen/src/: gen.rs  jose.rs  main.rs  oauth.rs  traits.rs
crates/iana/src/: jose.rs  lib.rs  oauth.rs
crates/jose/: Cargo.toml
crates/jose/src/: base64.rs  claims.rs  constraints.rs  hmac.rs  iana.rs  jwk.rs  jwt.rs  keystore.rs  lib.rs  rsa.rs  signer.rs  verifier.rs
crates/jose/tests/: generate.py  jws.rs
crates/keystore/: Cargo.toml
crates/keystore/src/: encrypter.rs  lib.rs
crates/keystore/tests/: generate.sh  keystore.rs  load.rs
crates/listener/: Cargo.toml
crates/listener/src/: info.rs  lib.rs  maybe_tls.rs  rewind.rs  server.rs  shutdown.rs  unix_or_tcp.rs
crates/matrix/: Cargo.toml
crates/matrix-synapse/: Cargo.toml
crates/matrix-synapse/src/: error.rs  lib.rs
crates/matrix/src/: lib.rs  mock.rs
crates/oauth2-types/: Cargo.toml
crates/oauth2-types/src/: errors.rs  lib.rs  oidc.rs  pkce.rs  registration.rs  requests.rs  response_type.rs  scope.rs  test_utils.rs  webfinger.rs
crates/oidc-client/: Cargo.toml
crates/oidc-client/src/: error.rs  http_service.rs  lib.rs
crates/policy/: Cargo.toml
crates/policy/policies/: .gitignore  Makefile  authorization_grant.rego  authorization_grant_test.rego  client_registration.rego  client_registration_test.rego  login.rego  register.rego  register_test.rego
crates/policy/src/: lib.rs  model.rs
crates/router/: Cargo.toml
crates/router/src/: endpoints.rs  lib.rs  traits.rs  url_builder.rs
crates/spa/: Cargo.toml
crates/spa/src/: lib.rs  vite.rs
crates/static-files/: .gitignore  Cargo.toml  package-lock.json  package.json  postcss.config.js  tailwind.config.js
crates/static-files/src/: lib.rs
crates/storage/: Cargo.toml  sqlx-data.json
crates/storage-pg/: Cargo.toml  build.rs  sqlx-data.json
crates/storage-pg/.sqlx/: query-015f7ad7c8d5403ce4dfb71d598fd9af472689d5aef7c1c4b1c594ca57c02237.json  query-036e9e2cb7271782e48700fecd3fdd80f596ed433f37f2528c7edbdc88b13646.json  query-037fae6964130343453ef607791c4c3deaa01b5aaa091d3a3487caf3e2634daf.json  query-03eee34f05df9c79f8ca5bfb1af339b3fcea95ba59395106318366a6ef432d85.json  query-0469c1d3ad11fd96febacad33302709c870ead848d6920cdfdb18912d543488e.json  query-047990a99794b565c2cad396946299db5b617f52f6c24bcca0a24c0c185c4478.json  query-048eec775f4af3ffd805e830e8286c6a5745e523b76e1083d6bfced0035c2f76.json  query-04e25c9267bf2eb143a6445345229081e7b386743a93b3833ef8ad9d09972f3b.json  query-08d7df347c806ef14b6d0fb031cab041d79ba48528420160e23286369db7af35.json  query-0d892dc8589ba54bb886972b6db00eaf7e41ff0db98fabdff5dcba0a7aa4e77d.json  query-100c6cfa46133f3b196b00ccf8f33ba0bcb4bb1afc1985092dd8ec51b40f631a.json  query-1764715e59f879f6b917ca30f8e3c1de5910c7a46e7fe52d1fb3bfd5561ac320.json  query-1787a5e86b60f57295fe5111259a29ffb15aa31e707cb7f2ad4269d125f6d8c9.json  query-1919d402fd6f148d14417f633be3353004f458c85f7b4f361802f86651900fbc.json  query-1a8701f5672de052bb766933f60b93249acc7237b996e8b93cd61b9f69c902ff.json  query-1b547552eed4128f2227c681ff2d45586cdb0c20b98393f89036fbf0f1d2dee2.json  query-1d372f36c382ab16264cea54537af3544ea6d6d75d10b432b07dbd0dadd2fa4e.json  query-1dbc50cdab36da307c569891ab7b1ab4aaf128fed6be67ca0f139d697614c63b.json  (+164 more)
crates/tasks/: Cargo.toml
matrix-authentication-service/: Cargo.toml  sqlx-data.json
matrix-authentication-service/migrations/: 20210709203827_sessions.down.sql  20210709203827_sessions.up.sql  20210709203828_timestamp_trigger.up.sql  20210716213724_users.down.sql  20210716213724_users.up.sql  20210722072901_user_sessions.down.sql  20210722072901_user_sessions.up.sql  20210731130515_oauth2_sessions.down.sql  20210731130515_oauth2_sessions.up.sql  20210813080413_oauth2_access_tokens.up.sql  20210827112032_oauth2_refresh_tokens.down.sql
matrix-authentication-service/src/: config.rs  csrf.rs  errors.rs  handlers.rs  main.rs  state.rs  storage.rs  templates.rs  tokens.rs
matrix-authentication-service/templates/: base.html  error.html  error.txt  index.html  login.html  reauth.html
oauth2-types/: Cargo.toml
oauth2-types/src/: errors.rs  lib.rs  oidc.rs  pkce.rs  requests.rs  test_utils.rs  types.rs
(+1249 files in other folders)
