[workspace]
default-members = ["crates/cli"]
members = ["crates/*"]
resolver = "2"

# Updated in the CI with a `sed` command
package.version = "0.8.0-rc.0"

package.license = "Apache-2.0"
package.authors = ["Quentin Gliech <quenting@element.io>"]
package.edition = "2021"
package.homepage = "https://matrix-org.github.io/matrix-authentication-service/"
package.repository = "https://github.com/matrix-org/matrix-authentication-service/"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"

str_to_string = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.dependencies]

# Workspace crates
mas-axum-utils = { path = "./crates/axum-utils/", version = "=0.8.0-rc.0" }
mas-cli = { path = "./crates/cli/", version = "=0.8.0-rc.0" }
mas-config = { path = "./crates/config/", version = "=0.8.0-rc.0" }
mas-data-model = { path = "./crates/data-model/", version = "=0.8.0-rc.0" }
mas-email = { path = "./crates/email/", version = "=0.8.0-rc.0" }
mas-graphql = { path = "./crates/graphql/", version = "=0.8.0-rc.0" }
mas-handlers = { path = "./crates/handlers/", version = "=0.8.0-rc.0" }
mas-http = { path = "./crates/http/", version = "=0.8.0-rc.0" }
mas-i18n = { path = "./crates/i18n/", version = "=0.8.0-rc.0" }
mas-i18n-scan = { path = "./crates/i18n-scan/", version = "=0.8.0-rc.0" }
mas-iana = { path = "./crates/iana/", version = "=0.8.0-rc.0" }
mas-iana-codegen = { path = "./crates/iana-codegen/", version = "=0.8.0-rc.0" }
mas-jose = { path = "./crates/jose/", version = "=0.8.0-rc.0" }
mas-keystore = { path = "./crates/keystore/", version = "=0.8.0-rc.0" }
mas-listener = { path = "./crates/listener/", version = "=0.8.0-rc.0" }
mas-matrix = { path = "./crates/matrix/", version = "=0.8.0-rc.0" }
mas-matrix-synapse = { path = "./crates/matrix-synapse/", version = "=0.8.0-rc.0" }
mas-oidc-client = { path = "./crates/oidc-client/", version = "=0.8.0-rc.0" }
mas-policy = { path = "./crates/policy/", version = "=0.8.0-rc.0" }
mas-router = { path = "./crates/router/", version = "=0.8.0-rc.0" }
mas-spa = { path = "./crates/spa/", version = "=0.8.0-rc.0" }
mas-storage = { path = "./crates/storage/", version = "=0.8.0-rc.0" }
mas-storage-pg = { path = "./crates/storage-pg/", version = "=0.8.0-rc.0" }
mas-tasks = { path = "./crates/tasks/", version = "=0.8.0-rc.0" }
mas-templates = { path = "./crates/templates/", version = "=0.8.0-rc.0" }
mas-tower = { path = "./crates/tower/", version = "=0.8.0-rc.0" }
oauth2-types = { path = "./crates/oauth2-types/", version = "=0.8.0-rc.0" }

# High-level error handling
[workspace.dependencies.anyhow]
version = "1.0.79"

# UTF-8 paths
[workspace.dependencies.camino]
version = "1.1.6"

# Time utilities
[workspace.dependencies.chrono]
version = "0.4.33"
default-features = false
features = ["serde", "clock"]

# CLI argument parsing
[workspace.dependencies.clap]
version = "4.4.18"
features = ["derive"]

# HTTP request/response
[workspace.dependencies.http]
version = "0.2.11"

# Templates
[workspace.dependencies.minijinja]
version = "1.0.12"

# Random values
[workspace.dependencies.rand]
version = "0.8.5"

# Serialization and deserialization
[workspace.dependencies.serde]
version = "1.0.196"
features = ["derive"] # Most of the time, if we need serde, we need derive

# JSON serialization and deserialization
[workspace.dependencies.serde_json]
version = "1.0.112"

# Custom error types
[workspace.dependencies.thiserror]
version = "1.0.56"

# Logging and tracing
[workspace.dependencies.tracing]
version = "0.1.40"
[workspace.dependencies.tracing-subscriber]
version = "0.3.18"

# OpenTelemetry
[workspace.dependencies.opentelemetry]
version = "0.21.0"
features = ["trace", "metrics"]
[workspace.dependencies.opentelemetry-semantic-conventions]
version = "0.13.0"
[workspace.dependencies.tracing-opentelemetry]
version = "0.22.0"
default-features = false

# URL manipulation
[workspace.dependencies.url]
version = "2.5.0"
features = ["serde"]

# ULID support
[workspace.dependencies.ulid]
version = "1.1.0"
features = ["serde"]

# A few profile opt-level tweaks to make the test suite run faster
[profile.dev.package]
num-bigint-dig.opt-level = 3
sqlx-macros.opt-level = 3
cranelift-codegen.opt-level = 3
regalloc2.opt-level = 3
argon2.opt-level = 3
pbkdf2.opt-level = 3
bcrypt.opt-level = 3
sha2.opt-level = 3
digest.opt-level = 3
block-buffer.opt-level = 3
generic-array.opt-level = 3
