[package]
name = "matrix-authentication-service"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.9.0", features = ["full"] }
async-trait = "0.1.50"

# Logging and tracing
tracing = "0.1.26"
tracing-subscriber = "0.2.19"

# Error management
thiserror = "1.0.26"
anyhow = "1.0.42"

# Web server
warp = "0.3.1"
tera = "1.12.1"

# Database access
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }

# Various structure (de)serialization
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
serde_with = { version = "1.9.4", features = ["hex", "chrono"] }

# Argument & config parsing
clap = "3.0.0-beta.2"
figment = { version = "0.10.6", features = ["env", "yaml", "test"] }
schemars = { version = "0.8.3", features = ["url", "chrono"] }

# Password hashing
argon2 = { version = "0.2.2", features = ["password-hash"] }
password-hash = { version = "0.2.2", features = ["std"] }

# Various data types and utilities
data-encoding = "2.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }
mime = "0.3.16"
rand = "0.8.4"
bincode = "1.3.3"
headers = "0.3.4"
cookie = "0.15.1"
chacha20poly1305 = { version = "0.8.1", features = ["std"] }

oauth2-types = { path = "../oauth2-types" }
