[package]
name = "matrix-authentication-service"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.11.0", features = ["full"] }
async-trait = "0.1.51"
tokio-stream = "0.1.7"
futures-util = "0.3.17"

# Logging and tracing
tracing = "0.1.27"
tracing-subscriber = "0.2.22"

# Error management
thiserror = "1.0.29"
anyhow = "1.0.44"

# Web server
warp = "0.3.1"
tower = { version = "0.4.8", features = ["full"] }
tower-http = { version = "0.1.1", features = ["full"] }
hyper = { version = "0.14.12", features = ["full"] }

# Template engine
tera = "1.12.1"

# Database access
sqlx = { version = "0.5.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "offline"] }

# Various structure (de)serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
serde_with = { version = "1.10.0", features = ["hex", "chrono"] }
serde_json = "1.0.68"
serde_urlencoded = "0.7.0"

# Argument & config parsing
clap = "3.0.0-beta.4"
figment = { version = "0.10.6", features = ["env", "yaml", "test"] }
schemars = { version = "0.8.3", features = ["url", "chrono"] }
dotenv = "0.15.0"

# Password hashing
argon2 = { version = "0.3.1", features = ["password-hash"] }
password-hash = { version = "0.3.2", features = ["std"] }

# Crypto, hashing and signing stuff
rsa = "0.5.0"
k256 = "0.9.6"
pkcs8 = { version = "0.7.6", features = ["pem"] }
elliptic-curve = { version = "0.10.6", features = ["pem"] }
chacha20poly1305 = { version = "0.9.0", features = ["std"] }
sha2 = "0.9.8"
crc = "2.0.0"

# Various data types and utilities
data-encoding = "2.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }
itertools = "0.10.1"
mime = "0.3.16"
rand = "0.8.4"
bincode = "1.3.3"
headers = "0.3.4"
cookie = "0.15.1"

oauth2-types = { path = "../oauth2-types", features = ["sqlx_type"] }

[dependencies.jwt-compact]
# Waiting on the next release because of the bump of the `rsa` dependency
git = "https://github.com/slowli/jwt-compact.git"
rev = "7a6dee6824c1d4e7c7f81019c9a968e5c9e44923"
features = ["rsa", "k256"]

[dev-dependencies]
indoc = "1.0.3"
