[package]
name = "oauth2-types"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2018"

[dependencies]
http = "0.2.4"
serde = "1.0.123"
serde_json = "1.0.64"
language-tags = { version = "0.3.2", features = ["serde"] }
url = { version = "2", features = ["serde"] }
parse-display = "0.5.0"
indoc = "1.0.3"
