[package]
name = "mas-axum-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = { version = "0.8.0", features = ["cookie-private", "cookie-key-expansion"] }
chrono.workspace = true
data-encoding = "2.4.0"
futures-util = "0.3.28"
headers = "0.3.9"
http.workspace = true
http-body = "0.4.5"
mime = "0.3.17"
rand.workspace = true
sentry = { version = "0.31.7", default-features = false }
serde.workspace = true
serde_with = "3.3.0"
serde_urlencoded = "0.7.1"
serde_json.workspace = true
thiserror.workspace = true
tokio = "1.32.0"
tower = { version = "0.4.13", features = ["util"] }
tracing.workspace = true
url.workspace = true
ulid.workspace = true

mas-data-model = { path = "../data-model" }
mas-http = { path = "../http", features = ["client"] }
mas-iana = { path = "../iana" }
mas-jose = { path = "../jose" }
mas-keystore = { path = "../keystore" }
mas-storage = { path = "../storage" }
mas-templates = { path = "../templates" }

[features]
native-roots = ["mas-http/native-roots"]
webpki-roots = ["mas-http/webpki-roots"]
