[package]
name = "mas-axum-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = { version = "0.8.0", features = ["cookie-private", "cookie-key-expansion"] }
chrono.workspace = true
data-encoding = "2.6.0"
futures-util = "0.3.30"
headers.workspace = true
http.workspace = true
http-body.workspace = true
icu_locid = "1.4.0"
mime = "0.3.17"
rand.workspace = true
sentry = { version = "0.33.0", default-features = false }
serde.workspace = true
serde_with = "3.8.1"
serde_urlencoded = "0.7.1"
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true
ulid.workspace = true

oauth2-types.workspace = true
mas-data-model.workspace = true
mas-http = { workspace = true, features = ["client"] }
mas-iana.workspace = true
mas-jose.workspace = true
mas-keystore.workspace = true
mas-storage.workspace = true
mas-templates.workspace = true
