[package]
name = "mas-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.6.20"
camino.workspace = true
clap.workspace = true
dotenvy = "0.15.7"
httpdate = "1.0.3"
hyper = { version = "0.14.28", features = ["full"] }
ipnetwork = "0.20.0"
itertools = "0.12.1"
listenfd = "1.0.1"
rand.workspace = true
rand_chacha = "0.3.1"
rustls = "0.22.2"
serde_json.workspace = true
serde_yaml = "0.9.30"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
url.workspace = true
zeroize = "1.7.0"

tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-http = { version = "0.10.0", features = ["tokio", "hyper"] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio", "collector_client"] }
opentelemetry-otlp = { version = "0.14.0", features = ["trace", "metrics"] }
opentelemetry-prometheus = "0.14.1"
opentelemetry-semantic-conventions.workspace = true
opentelemetry-stdout = { version = "0.2.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21.2", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-zipkin = { version = "0.19.0", default-features = false }
prometheus = "0.13.3"
sentry = { version = "0.31.8", default-features = false, features = ["backtrace", "contexts", "panic", "tower"] }
sentry-tracing = "0.31.8"
sentry-tower = { version = "0.31.8", features = ["http"] }

mas-config.workspace = true
mas-data-model.workspace = true
mas-email.workspace = true
mas-graphql.workspace = true
mas-handlers = { workspace = true }
mas-http = { workspace = true, features = ["axum", "client"] }
mas-i18n.workspace = true
mas-iana.workspace = true
mas-keystore.workspace = true
mas-listener.workspace = true
mas-matrix.workspace = true
mas-matrix-synapse.workspace = true
mas-policy.workspace = true
mas-router.workspace = true
mas-spa.workspace = true
mas-storage.workspace = true
mas-storage-pg.workspace = true
mas-tasks.workspace = true
mas-templates.workspace = true
mas-tower.workspace = true
oauth2-types.workspace = true

[features]
default = ["webpki-roots", "policy-cache"]

# Features used for the prebuilt binaries
dist = ["policy-cache", "native-roots", "mas-config/dist"]

# Features used in the Docker image
docker = ["native-roots", "mas-config/docker"]

# Enable wasmtime compilation cache
policy-cache = ["mas-policy/cache"]

# Use the native root certificates
native-roots = ["mas-http/native-roots", "mas-handlers/native-roots"]
# Use the webpki root certificates
webpki-roots = ["mas-http/webpki-roots", "mas-handlers/webpki-roots"]
