[package]
name = "mas-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.6.20"
camino.workspace = true
clap.workspace = true
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenvy = "0.15.7"
figment.workspace = true
httpdate = "1.0.3"
hyper.workspace = true
ipnetwork = "0.20.0"
itertools = "0.12.1"
listenfd = "1.0.1"
rand.workspace = true
rand_chacha = "0.3.1"
rustls.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.4.4", features = ["fs"] }
url.workspace = true
zeroize = "1.7.0"

tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-http.workspace = true
opentelemetry-jaeger-propagator = "0.2.0"
opentelemetry-otlp = { version = "0.16.0", default-features = false, features = ["trace", "metrics", "http-proto"] }
opentelemetry-prometheus = "0.16.0"
opentelemetry-semantic-conventions.workspace = true
opentelemetry-stdout = { version = "0.4.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["trace", "metrics", "rt-tokio"] }
prometheus = "0.13.4"
sentry = { version = "0.31.8", default-features = false, features = ["backtrace", "contexts", "panic", "tower"] }
sentry-tracing = "0.31.8"
sentry-tower = { version = "0.31.8", features = ["http"] }

mas-config.workspace = true
mas-data-model.workspace = true
mas-email.workspace = true
mas-handlers = { workspace = true }
mas-http = { workspace = true, features = ["client"] }
mas-i18n.workspace = true
mas-iana.workspace = true
mas-keystore.workspace = true
mas-listener.workspace = true
mas-matrix.workspace = true
mas-matrix-synapse.workspace = true
mas-policy.workspace = true
mas-router.workspace = true
mas-spa.workspace = true
mas-storage.workspace = true
mas-storage-pg.workspace = true
mas-tasks.workspace = true
mas-templates.workspace = true
mas-tower.workspace = true
oauth2-types.workspace = true

[features]
# Features used for the prebuilt binaries
dist = ["mas-config/dist"]

# Features used in the Docker image
docker = ["mas-config/docker"]
