[package]
name = "mas-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true

thiserror.workspace = true
anyhow.workspace = true

camino = { workspace = true, features = ["serde1"] }
chrono.workspace = true
figment.workspace = true
ipnetwork = { version = "0.20.0", features = ["serde", "schemars"] }
schemars.workspace = true
ulid.workspace = true
url.workspace = true

serde.workspace = true
serde_with = { version = "3.8.2", features = ["hex", "chrono"] }
serde_json.workspace = true

pem-rfc7468 = "0.7.0"
rustls-pki-types = "1.7.0"
rustls-pemfile = "2.1.2"
rand.workspace = true
rand_chacha = "0.3.1"

indoc = "2.0.5"

mas-jose.workspace = true
mas-keystore.workspace = true
mas-iana.workspace = true

[features]
docker = []
dist = []

[[bin]]
name = "schema"
doc = false
