[package]
name = "mas-core"
version = "0.1.0"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"

[features]
dev = ["mas-static-files/dev", "mas-templates/dev"]

[dependencies]
# Async runtime
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.51"
tokio-stream = "0.1.8"
futures-util = "0.3.18"

# Logging and tracing
tracing = "0.1.29"
opentelemetry = "0.16.0"

# Error management
thiserror = "1.0.30"
anyhow = "1.0.51"

# Web server
warp = "0.3.2"
hyper = { version = "0.14.15", features = ["full"] }

# Database access
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "offline"] }

# Various structure (de)serialization
serde = { version = "1.0.130", features = ["derive"] }
serde_with = { version = "1.11.0", features = ["hex", "chrono"] }
serde_json = "1.0.72"
serde_urlencoded = "0.7.0"

# Password hashing
argon2 = { version = "0.3.1", features = ["password-hash"] }
password-hash = { version = "0.3.2", features = ["std"] }

# Crypto, hashing and signing stuff
rsa = "0.5.0"
k256 = "0.9.6"
pkcs8 = { version = "0.7.6", features = ["pem"] }
elliptic-curve = { version = "0.10.6", features = ["pem"] }
chacha20poly1305 = { version = "0.9.0", features = ["std"] }
sha2 = "0.9.8"
crc = "2.1.0"
jwt-compact = { version = "0.5.0-beta.1", features = ["with_rsa", "k256"] }

# Various data types and utilities
data-encoding = "2.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
url = { version = "2.2.2", features = ["serde"] }
itertools = "0.10.1"
mime = "0.3.16"
rand = "0.8.4"
bincode = "1.3.3"
headers = "0.3.5"
cookie = "0.15.1"
once_cell = "1.8.0"

oauth2-types = { path = "../oauth2-types", features = ["sqlx_type"] }
mas-config = { path = "../config" }
mas-data-model = { path = "../data-model" }
mas-templates = { path = "../templates" }
mas-static-files = { path = "../static-files" }

[dev-dependencies]
indoc = "1.0.3"
